--- a/flutter_appcenter_bundle/pubspec.yaml
+++ b/flutter_appcenter_bundle/pubspec.yaml
@@ -5,7 +5,7 @@ homepage: https://github.com/hanabi1224/flutter_appcenter_bundle
 publish_to: https://pub.dev/
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
   # Flutter versions prior to 1.10 did not support the flutter.plugin.platforms map.
   flutter: ">=1.10.0 <2.0.0"
 
